--- a/templates/index.html
+++ b/templates/index.html
@@ -45,50 +45,9 @@
     <div class="examplefloat">
         <p class="float"> It is example of float property. By this property we can align anythink left and right on the screen.</p>
 
-        <h2>Float property:</h2>
+        <h2>Video Window:</h2>
 
-        <p>
-            The float property allows you
-            to take an element in normal
-            flow and place it as far to the
-            left or right of the containing
-            element as possible.
-            Anything else that sits inside
-            the containing element will
-            flow around the element that is
 
-            floated.
-            When you use the float
-            property, you should also use the
-            width property to indicate how
-            wide the floated element should
-            be. If you do not, results can be
-            inconsistent but the box is likely
-            to take up the full width of the
-            containing element (just like it
-            would in normal flow).
-            
-            The float property allows you
-            to take an element in normal
-            flow and place it as far to the
-            left or right of the containing
-            element as possible.
-            Anything else that sits inside
-            the containing element will
-            flow around the element that is
-
-            floated.
-            When you use the float
-            property, you should also use the
-            width property to indicate how
-            wide the floated element should
-            be. If you do not, results can be
-            inconsistent but the box is likely
-            to take up the full width of the
-            containing element (just like it
-            would in normal flow).
-
-        </p>
 
 
 
