--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
         <form action="" method="POST">
             {% csrf_token %}
             <h2 id="log">Login Here</h2>
-          <label>Username</label>  <input type="text" name="username" placeholder="Enter email:" > <br><br>
+          <label>Username</label>  <input type="text" name="username" placeholder="Enter username" > <br><br>
             <label>Password:</label> <input type="password" name="password" placeholder="*****"><br><br>
             <a href="#" id="forget">Forget password</a><br> <br>
             <input type="submit" value="Log in" name="submit" id="signin" >
