--- a/templates/userprofile.html
+++ b/templates/userprofile.html
@@ -15,6 +15,8 @@
             <label for="Email">Email: </label>{{ user.email }}<input type="email" name="email" id="Email" >
             <br><br>
             <a href="{% url 'quotesform' %}" id="submit" >Publish your quote</a>
+            <a href="{% url 'chatbox' %}" id="chat" >Chatting</a>
+
         </form>
 
     </body>
