--- a/static/cssfile/base.css
+++ b/static/cssfile/base.css
@@ -1,6 +1,6 @@
 .sticky nav{
 
-     background-color:seagreen;
+     background-color:#2C3A47;
      top:0px;
      left:0px;
      margin: 0px;
@@ -25,7 +25,7 @@
     margin: auto;
     margin-left: 10px;
     color: wheat;
-    font-size: 20;
+    font-size: 20px;
     margin-top: 20px;
     margin-right: 30px;
     padding-bottom: 15px;
