--- a/templates/index.html
+++ b/templates/index.html
@@ -41,20 +41,39 @@
     </div>
 {% endfor %}
 
+      <div class="message">
+          <p> Message</p>
+      </div>
 
-    <div class="examplefloat">
-        <p class="float"> It is example of float property. By this property we can align anythink left and right on the screen.</p>
+ <div class="mainwindow">
+      <div class=" firstwindow">
+          <form>
 
-        <h2>Video Window:</h2>
-        <p>sfhsuhfushfhsudhfushfuhsufhushfusfsgfisduuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuu</p>
+          <p>
+              Education is the most powerful weapon which you can use to change the world -nelson mandala<br>
+
+          </p>
+
+              </form>
+      </div>
+
+
+     <div class="you"><p> My Youtube Channel </p></div>
+
+    <div class="examplefloat ">
 
 
 
+        <iframe width="560" height="310"
+                src="https://www.youtube-nocookie.com/embed/JNQdGKzElMQ"
+                frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
 
     </div>
+     </div>
 
 
-    <h2 id="mobile">My Photography Collections:</h2>
+    <h2 id="photography">My Photography Collections:</h2>
 
       <div class="overload">
     {% for photo in ph %}
