--- a/static/cssfile/quotes.css
+++ b/static/cssfile/quotes.css
@@ -4,12 +4,12 @@
     text-align: justify;
 }
 .q{
-    border:2px solid green;
+    border:2px solid #2C3A47;
     position: center;
     padding-left: 45%;
 }
 .quotes{
-    border:1px solid green;
+    border:1px solid #2C3A47;
     border-radius: 5px;
     text-align: center;
     width:700px;
@@ -26,7 +26,7 @@ font-size:20px;
 font-style:italic;
 }
 .author{
-    border:1px solid green;
+    border:1px solid #2C3A47;
     max-width:150px;
     min-height: 30px;
     text-align: center;
@@ -37,7 +37,7 @@ font-style:italic;
     padding-bottom: 50px;
     padding:5px;
     padding-top:5px;
-    background-color:cadetblue;
+    background-color:#2C3A47;
     color: cornsilk;
     font-weight:bold;
     font-size: 19px;
@@ -47,7 +47,7 @@ font-style:italic;
 .title{
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
-    border-bottom: 1px solid green;
+    border-bottom: 1px solid #2C3A47;
     text-align: left;
     background-color: beige;
     min-height: 30px;
@@ -55,5 +55,5 @@ font-style:italic;
     padding-right: 10px;
     padding-top: 5px;
     font-size:20px;
-    color:green;
+    color:darkslategray;
 }
