--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 
 <html>
 <head>
-       <title> Rubaiyahafiz.com </title>
+       <title> blogsite.com </title>
     <link href="{% static '../static/cssfile/indexcss.css' %}" rel="stylesheet" type="text/css">
 
 </head>
