--- a/templates/regforms.html
+++ b/templates/regforms.html
@@ -17,24 +17,25 @@
                 {{ frm.username }}
                     {{ frm.username.errors }}
                 </div>
+                <br>
             <label >Email: </label>
                  <div>
                 {{ frm.email }}
                     {{ frm.email.errors }}
-                </div>
+                </div><br>
             <label >Password: </label>
                  <div>
                 {{ frm.password }}
                     {{ frm.password.errors }}
                 </div>
-
+<br>
                 <label >Confirm password: </label>
                  <div>
                 {{ frm.confirm_password }}
                     {{ frm.confirm_password.errors }}
                 </div>
 
-            <input type="submit" name="submit"  value="Sign up" id="submit">
+            <input type="submit" name="submit"  value="Sign Up" id="submit">
         </form>
 
 
