--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,4 @@
+
 {% load static %}
 <html>
 <head>
@@ -9,11 +10,24 @@
     </head>
 
 <body>
+    <header>
+        <div class="mainsticky">
+            <nav>
+                <ul class="mainnavi">
+                    <li><a href="/ " id="home">Home</a>
+                    <li><a href="{%url 'about'%}">About</a></li>
+                    <li><a href="{% url 'signup' %}" id="form" >Sign up</a></li>
+                    <li><a href="{% url 'quotes' %}" id="quotes">Quotes</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     <div class="login">
         <form action="" method="POST">
             {% csrf_token %}
             <h2 id="log">Login Here</h2>
-          <label>Username</label>  <input type="text" name="username" placeholder="Enter username" > <br><br>
+            <br><br>
+          <label>Username:</label>  <input type="text" name="username" placeholder="Enter username" > <br><br>
             <label>Password:</label> <input type="password" name="password" placeholder="***"><br><br>
             <p>{{ error }}</p>
             <input type="submit" value="Log in" name="submit" id="signin" >
