--- a/templates/chatbox.html
+++ b/templates/chatbox.html
@@ -6,11 +6,25 @@
     <title>Title</title>
 
         <link href="{%static '../static/cssfile/chatbox.css'%}" rel="stylesheet" type="text/css">
+    <link href="{% static '../static/cssfile/base.css'%}" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 </head>
 <body>
 
+<header>
+    <div class="sticky">
+            <nav>
+                <ul class="navi">
+                    <li><a href="/ " id="home">Home</a>
+                    <li><a href="{%url 'about'%}" >About</a></li>
+                    <li><a href="{% url 'signup' %} " id="form" >Sign up</a></li>
+                    <li><a href="{% url 'quotes' %}" id="quotes">Quotes</a></li>
+
+                </ul>
+            </nav>
+        </div>
+</header>
 
 <div class="container-fluid h-100">
     <div class="row h-100">
