--- a/templates/userprofile.html
+++ b/templates/userprofile.html
@@ -5,9 +5,26 @@
         Profile
         </title>
         <link href="{% static '..\static\cssfile\userprofile.css' %}" type="text/css" rel="stylesheet">
+
+        <link href="{% static '../static/cssfile/base.css'%}" rel="stylesheet" type="text/css">
     </head>
+
+    <header>
+    <div class="sticky">
+            <nav>
+                <ul class="navi">
+                    <li><a href="/ " id="home">Home</a>
+                    <li><a href="{%url 'about'%}" >About</a></li>
+                    <li><a href="{% url 'signup' %} " id="form" >Sign up</a></li>
+                    <li><a href="{% url 'quotes' %}" id="quotes">Quotes</a></li>
+
+                </ul>
+            </nav>
+        </div>
+</header>
+
     <body class="mainform">
-        <p id="Pro">Profile</p>
+
         <form action="." method="POST">
             <div id="hi"> Welcome {{ user.username }}</div>
             <br><br><br>
