--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,7 @@
                     <li><a href="{%url 'about'%}">About</a></li>
                     <li><a href="{% url 'signup' %}" id="form" >Sign up</a></li>
                     <li><a href="{% url 'quotes' %}" id="quotes">Quotes</a></li>
+                    <li><a href="{% url 'UserProfile' %}" id="">UserProfile</a></li>
 
                 </ul>
             </nav>
